# rlox

./: .gitignore  Cargo.toml
benches/: bench1.rs
src/: environment.rs  interpreter.rs  lib.rs  main.rs  parser.rs  resolver.rs  runner.rs  scanner.rs  syntax.rs
src/parser/: ast.rs  interpreter.rs
src/scanner/: token.rs
src/syntax/: ast.rs  literal.rs  parser.rs  token.rs  tokenizer.rs  visitor.rs
test_data/benches/: equality.lox
tests/: test_class.rs  test_closure.rs  test_function.rs  test_logic.rs  test_loop.rs  test_parser.rs  test_scanner.rs  test_this.rs
