[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
thiserror = "1.0.60"
[dev-dependencies]
criterion="0.5"

[[bench]]
name = "bench1"
harness = false
[profile.release]
panic="abort"
debug = true
